Adding initial changes

--- a/login-product-page/src/main/java/com/qa/swag/base/config.properties
+++ b/login-product-page/src/main/java/com/qa/swag/base/config.properties
@@ -1,4 +1,9 @@
 url=https://www.saucedemo.com/
 browser=chrome
-
-
+chromeDriverPath=C:\\Users\\chromedriver.exe
+fireFoxDriverPath=C:\\Firefoxdriver.exe
+loginDataExcelPath = C:\\Users\\renji\\eclipse-workspace\\interview\\src\\main\\java\\com\\qa\\swag\\util\\SwagLabLoginData.xlsx
+validDataExcelSheet=validData
+invalidDataExcelSheet=invalidData
+userName=standard_user
+password=secret_sauce
